# zkenc

./: .gitignore  COMPLETION_REPORT.md  Cargo.toml  QUICKSTART.md  README.md  SETUP_COMPLETE.md  Scheme.tex  TRANSLATION_SUMMARY.md  WORKSPACE_SETUP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  release.yml
docs/: .gitignore  README.md  TRANSLATION_GUIDE.md  TRANSLATION_GUIDE_zh-TW.md  docusaurus.config.ts  package.json  package.json.bak  sidebars.ts  tsconfig.json
docs/docs/: intro.md
docs/docs/api/: zkenc-cli.md  zkenc-core.md  zkenc-js.md
docs/docs/getting-started/: zkenc-cli.md  zkenc-js.md
docs/docs/guides/: cross-tool-workflow.md  intro.md  nodejs-integration.md  react-integration.md
docs/i18n/ja/: code.json
docs/i18n/ja/docusaurus-plugin-content-docs/: current.json
docs/i18n/ja/docusaurus-theme-classic/: footer.json  navbar.json
docs/i18n/zh-CN/: code.json
docs/i18n/zh-CN/docusaurus-plugin-content-docs/: current.json
docs/i18n/zh-CN/docusaurus-theme-classic/: footer.json  navbar.json
docs/i18n/zh-TW/: code.json
docs/i18n/zh-TW/docusaurus-plugin-content-docs/: current.json
docs/i18n/zh-TW/docusaurus-theme-classic/: footer.json  navbar.json
docs/src/: types.d.ts
docs/src/components/: PlaygroundClient.tsx
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx  playground.module.css  playground.tsx
(+30 files in other folders)
